--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+		<groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+   
+</dependency>
+
+		<dependency>
+    <groupId>net.logstash.logback</groupId>
+    <artifactId>logstash-logback-encoder</artifactId>
+    <version>6.6</version>
+</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -85,6 +97,7 @@
     <artifactId>tomcat-embed-jasper</artifactId>
     <scope>provided</scope>
 </dependency>
+
 
 	</dependencies>
 
